Finished reference detail view

--- a/src/app/components/referred-details/referred-details.component.css
+++ b/src/app/components/referred-details/referred-details.component.css
@@ -3,6 +3,11 @@ table {
     width: 50%;
 }
 
+.title {
+    margin-top: 25px;
+
+}
+
 .referrals-container{
     box-sizing: border-box;
     display: flex;
