--- a/src/app/components/referred-details/referred-details.component.html
+++ b/src/app/components/referred-details/referred-details.component.html
@@ -1,197 +1,70 @@
-<div class="referrals-container">
-  <div class="patient-section">
-    <h4 class="title-section">Sección del paciente</h4>
-    <section class="row justify-content-start">
+<p class="h1 text-center title">Detalle de Referencia</p>
+<div class="card mb-3">
+  <div class="card-body">
+    <div class="row">
       <div class="col-md-3 mb-3">
-        <label class="form-label">Paciente:</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.fullName" disabled />
-      </div>
-      <div class="col-md-3 mb-3">
-        <label class="form-label">Sexo:</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.gender" disabled />
-      </div>
-      <div class="col-md-3 mb-3">
-        <label class="form-label">Edad:</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.age" disabled />
-      </div>
-      <div class="col-md-3 mb-3">
-        <label class="form-label">Dirección</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.address" disabled />
+        <label class="form-label">PACIENTE:</label>
+        <input type="text" class="form-control form-control-sm" [ngModel]="patient.firstName + ' ' + patient.lastName"
+          disabled />
       </div>
       <div class="col-md-3">
-        <label class="form-label">Numero de documento:</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.documentNumber" disabled />
+        <label class="form-label">DNI:</label>
+        <input type="text" class="form-control form-control-sm" [ngModel]="patient.documentNumber" disabled />
       </div>
       <div class="col-md-3">
-        <label class="form-label">Dpto./Prov./Dist:</label>
-        <input type="text" class="form-control form-control-sm" [value]="patientDto.location" disabled />
+        <label class="form-label">FECHA NACIMIENTO:</label>
+        <input type="text" class="form-control form-control-sm" [ngModel]="patient.birthdate | date: 'dd/MM/yyyy'"
+          disabled />
       </div>
-      <div class="col-auto">
-        <label class="form-label">Condición del Paciente:</label>
-        <select class="form-select form-select-sm" disabled>
-          <option value="ESTABLE">Estable</option>
-          <option selected value="MAL ESTADO">Mal Estado</option>
-          <option value="GRAVE">Grave</option>
-        </select>
+      <div class="col-md-3">
+        <label class="form-label">SEXO:</label>
+        <input type="text" class="form-control form-control-sm" [ngModel]="patient.gender" disabled />
       </div>
-    </section>
-  </div>
-  <!-- -->
-  <div class="main-container">
-    <div class="container-buttons">
-      <div class="row-btns">
-        <button (click)="toggleShowAnamnesis()" type="checkbox" class="buttons-anam">
-          Anamnesis / Fisico
-        </button>
-        <button (click)="toggleDiagnostic()" type="checkbox" class="buttons-anam">
-          Apoyo al Diagnostico
-        </button>
-      </div>
-    </div>
-    <div class="container-forms">
-      <div class="info-container">
-        <section class="column-1">
-          <h4 class="title-section">Datos de Referencia</h4>
-          <form>
-            <div class="line-start">
-              <label>Establecimiento Origen:</label>
-              <div class="origin-establecimiento">
-                <select name="select">
-                  <option value="value1">Value 1</option>
-                  <option value="value2" selected>Establecimiento de Salud</option>
-                  <option value="value3">Value 3</option>
-                </select>
-              </div>
-            </div>
-            <div class="line-start">
-              <label>Establecimiento Destino:</label>
-              <div class="origin-establecimiento">
-                <select name="select">
-                  <option value="value1">Value 1</option>
-                  <option value="value2" selected>Establecimiento de Salud</option>
-                  <option value="value3">Value 3</option>
-                </select>
-              </div>
-            </div>
-            <div class="line-start">
-              <label>Sevicio de Destino</label>
-              <div class="origin-establecimiento">
-                <select name="select">
-                  <option value="value1">Value 1</option>
-                  <option value="value2" selected>Consulta médica externa</option>
-                  <option value="value3">Value 3</option>
-                </select>
-              </div>
-            </div>
-            <div class="line-start">
-              <label>Especialidad</label>
-              <div class="origin-establecimiento">
-                <select name="select">
-                  <option value="value1">Value 1</option>
-                  <option value="value2" selected>Cirujia</option>
-                  <option value="value3">Value 3</option>
-                </select>
-              </div>
-            </div>
-            <div class="row-line-below">
-              <label>Motivo de Referencia</label>
-              <div class="speciality">
-                <p>{{ reference.reason }}</p>
-              </div>
-            </div>
-          </form>
-        </section>
-        <section class="column-2">
-          <div *ngIf="isShownAnamnesis" class="anamnesis-fisico">
-            <h4 class="title-section">Anamnesis</h4>
-            Resumen Anamnesis
-            <textarea rows="4">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
-            Examen Físico:
-            <form>
-              <div class="line">
-                <div class="elem">
-                  <label class="lb-txt">Temp</label>
-                  <input class="input-lb" type="number" name="temp" value="36*" formControlName="temperatura" />
-                </div>
-                <div class="elem">
-                  <label class="lb-txt">P/A</label>
-                  <input class="input-lb" type="text" name="pa" value=" " formControlName="pa" />
-                </div>
-              </div>
-              <div class="line">
-                <div class="elem">
-                  <label class="lb-txt">FC</label>
-                  <input class="input-lb" type="text" name="FC" value="" formControlName="fc" />
-                </div>
-                <div class="elem">
-                  <label class="lb-txt">FR</label>
-                  <input class="input-lb" type="text" name="FR" value="" formControlName="fr" />
-                </div>
-              </div>
-              <div class="line">
-                <div class="elem">
-                  <label class="lb-txt">Peso</label>
-                  <input class="input-lb" type="text" name="weight" value="" formControlName="peso" />
-                </div>
-                <div class="elem">
-                  <label class="lb-txt">Altura</label>
-                  <input class="input-lb" type="text" name="height" value="" formControlName="altura" />
-                </div>
-              </div>
-            </form>
-            Resumen Examen Físico
 
-            <textarea rows="2">Hinchazón de las piernas</textarea>
-          </div>
-          <div *ngIf="isShownDiagnostic" class="diagnostic-help">
-            <div class="t-container">
-              <div class="section-header">
-                <h4 class="title-section">Procedimiento</h4>
-                <button>Añadir</button>
-              </div>
-              <div class="container-table">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z5">
-                  <ng-container matColumnDef="code">
-                    <th mat-header-cell *matHeaderCellDef>Code</th>
-                    <td mat-cell *matCellDef="let element">{{ element.code }}</td>
-                  </ng-container>
-                  <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef>Description</th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.description }}
-                    </td>
-                  </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                </table>
-              </div>
-            </div>
-            <br />
-            <br />
-            <div class="t-container">
-              <div class="section-header">
-                <h4 class="title-section">Examen de Laboratorio</h4>
-                <button>Añadir</button>
-              </div>
-              <table mat-table [dataSource]="dataSource1" class="mat-elevation-z5">
-                <ng-container matColumnDef="description">
-                  <th mat-header-cell *matHeaderCellDef>Description</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.description }}
-                  </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-              </table>
-            </div>
-          </div>
-        </section>
-      </div>
     </div>
   </div>
-  <div class="botones">
-    <button type="submit" class="btn btn-regresar" (click)="onBack()">
-      Regresar
-    </button>
+</div>
+<div class="row d-flex justify-content-center">
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-header">
+        <h4>Referencia</h4>
+      </div>
+    
+      <div class="card-body">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="text-end">
+              <span class="badge bg-secondary"></span>
+            </h4>
+            <h5 class="card-title  fw-bold">
+              Fecha: {{ reference.referenceDate| date: "dd/MM/yyyy HH:mm" }}
+            </h5>
+            <hr />
+            <h5 class="card-title">
+              <b class="card-title">Establecimiento Origen: </b>{{ sourceEstablishment }}
+            </h5>
+            <h5 class="card-title">
+              <b class="card-title">Establecimiento Destino: </b>{{ destinyEstablishment }}
+            </h5>
+            <h5 class="card-title">
+              <b class="card-title">Servicio de Destino:</b> {{destinyService}}
+            </h5>
+            <h5 class="card-title">
+              <b class="card-title">Especialidad: </b>{{ speciality }}
+            </h5>
+            <h5 class="card-title">
+              <b class="card-title">Motivo: </b>{{ reference.reason }}
+            </h5>
+            <p class="card-text">
+              
+            </p>
+          </div>
+        </div>
+        <div class="back_button d-flex justify-content-center my-4">
+          <button class="btn btn-danger" (click)="goBack()">Regresar</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
