--- a/src/app/components/referred-details/referred-details.component.html
+++ b/src/app/components/referred-details/referred-details.component.html
@@ -1,5 +1,5 @@
 <p class="h1 text-center title">Detalle de Referencia</p>
-<div class="card mb-3">
+<div class="card mb-3 shadow">
   <div class="card-body">
     <div class="row">
       <div class="col-md-3 mb-3">
