--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -1,5 +1,5 @@
 <div class="patient-section">
-  <h4 class="title-section">Sección del paciente</h4>
+  <p class="title-section h4">Sección del paciente</p>
   <section class="row justify-content-start">
     <div class="col-md-3 mb-3">
       <label class="form-label">Paciente:</label>
