--- a/src/app/components/analyze/analyze.component.css
+++ b/src/app/components/analyze/analyze.component.css
@@ -41,7 +41,7 @@ body {
     width: 50%;
     background-color: #ECF4FC;
     padding: 20px;
-    border-color: gray;
+    border-color: rgb(218, 218, 218);
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
@@ -112,7 +112,7 @@ body {
 .diagnostic-symptom{
     background-color: #ECF4FC;
     padding: 20px;
-    border-color: gray;
+    border-color: rgb(218, 218, 218);
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
@@ -138,10 +138,12 @@ body {
 
 
 .paragraph-container{
-    margin: 30px;
-    padding: 20px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 2vw;
     background-color: #ECF4FC;
-    border-color: gray;
+    border-color: rgb(218, 218, 218);
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
