--- a/src/app/components/diagnostic/diagnostic.component.css
+++ b/src/app/components/diagnostic/diagnostic.component.css
@@ -9,6 +9,12 @@
     flex-direction: column;
 }
 
+.container {
+    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -122,11 +128,11 @@ body {
     width: 40%;
     height: 100%;
     padding: 20px;
-    border-color: gray;
+    border-color: rgb(218, 218, 218);
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 3px 7px 0px rgba(143, 143, 143, 0.5)
 }
 
 .list-items{
@@ -142,11 +148,11 @@ body {
     width: 40%;
     height: 100%;
     padding: 20px;
-    border-color: gray;
+    border-color: rgb(218, 218, 218);
     border-width: 2px;
     border-radius: 10px;
     border-style:solid;
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 3px 7px 0px rgba(143, 143, 143, 0.5)
 }
 
 .btn-analyze{
@@ -177,6 +183,25 @@ footer{
         align-items: center;
     }
 
+#symptom-area {
+    width: 80%;
+    padding: 20px;
+    margin-bottom: 100px;
+    align-items: center;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+#diagnostic-area {
+    width: 80%;
+    padding: 20px;
+    margin-bottom: 100px;
+    align-items: center;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    }
     
 .diagnostic-symptom{
     display: flex;
@@ -195,6 +220,13 @@ footer{
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.form-check {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 100px;
 }
 
 .symptom {
