--- a/src/app/components/diagnostic/diagnostic.component.html
+++ b/src/app/components/diagnostic/diagnostic.component.html
@@ -14,7 +14,7 @@
   <form (ngSubmit)="onAnalize()">
     <div class="diagnostic-symptom">
       <section class="diagnostic">
-        <h4 class="title-section">Sintomas Leves</h4>
+        <p class="title-section h4">Sintomas Leves</p>
         <tr *ngFor="let symptom of symptoms">
           <td *ngIf="!symptom.requiredAttention">
             <div class="form-check">
@@ -26,7 +26,7 @@
         </tr>
       </section>
       <section class="symptom">
-        <h4 class="title-section">Sintomas Graves</h4>
+        <p class="title-section h4">Sintomas Graves</p>
         <tr *ngFor="let symptom of symptoms">
           <td *ngIf="symptom.requiredAttention">
             <div class="form-check">
@@ -39,7 +39,7 @@
       </section>
     </div>
     <footer>
-      <button type="submit" class="btn-analyze">Analizar</button>
+      <button type="submit" class="btn btn-primary btn-lg">Analizar</button>
     </footer>
   </form>
 </div>
