--- a/src/app/components/dialog-no-reference/dialog-no-reference.component.html
+++ b/src/app/components/dialog-no-reference/dialog-no-reference.component.html
@@ -2,7 +2,7 @@
     <p mat-dialog-title>¿No desea referir?</p>
     <textarea class="input-text" rows="5" md-select-on-focus placeholder="Mensaje"></textarea>
     <mat-dialog-actions class="area-button">
-        <button mat-button mat-dialog-close class="button button-close button-primary"> Cancelar</button>
-        <button mat-button mat-dialog-close class="button button-confirm" (click)="noReference()"> Confirmar</button>
+        <button mat-button mat-dialog-close class="btn btn-secondary bt-lg"> Cancelar</button>
+        <button mat-button mat-dialog-close class="btn btn-primary bt-lg" (click)="noReference()"> Confirmar</button>
     </mat-dialog-actions>
 </div>
