--- a/src/app/components/patient-info/patient-info.component.css
+++ b/src/app/components/patient-info/patient-info.component.css
@@ -1,15 +1,15 @@
 .patient-section{
-    border-color: #04578B;
-    border-width: 2px;
+    border-color: #e9e9e9;
+    border-width: 1px;
     border-radius: 10px;
     border-style:solid;
-    background-color: #bdf8f5;
+    background-color: #ECF4FC ;
     margin: 30px 7%;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px 3px 7px 0px rgba(153, 153, 153, 0.5)
 }
 
 .row {
