--- a/src/app/components/referrals/referrals.component.html
+++ b/src/app/components/referrals/referrals.component.html
@@ -79,7 +79,7 @@
            <p class="title-section h4">Anamnesis</p>
             <div class="summary-area mt-5">
                Resumen Anamnesis
-            <textarea rows="4" id="anamnesisResume">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
+            <textarea rows="4" id="anamnesisSummary">Paciente lego con 6 días de fiebre, presenta dolores musculares.</textarea>
             </div>
            
             
@@ -122,7 +122,7 @@
             <div class="summary-area">
               Resumen Examen Físico
 
-              <textarea rows="2" id="examResume">Hinchazón de las piernas</textarea>
+              <textarea rows="2" id="examSummary" class="mt-2 h-10">Hinchazón de las piernas</textarea>
             </div>
             
           </div>
